add booking details

--- a/html/booking.html
+++ b/html/booking.html
@@ -15,7 +15,7 @@
 
 <body>
     <div id="nav-placeholder"></div>
-    <section class="bg-img-1 bg-overlay-3 p-t-0 p-b-50" style="background-image: url('../images/carousel2');">
+    <section class="bg-img-1 bg-overlay-3 p-t-0 p-b-50" style="background-image: url('../images/carousel1');">
         <div class="container">
             <div class="flex-w flex-sb-m">
                 <div class="p-t-10 p-b-10 p-r-30">
@@ -80,10 +80,9 @@
                         Please select a date first
                     </div>
                 </div>
-                <button type="button" class="btn btn-dark" style="margin-left:10px;margin-top:10px;display:none;" id="timeconfirm">Select this timeslot?</button>
             </div>
         </div>
-        <div class="row" style="background-image: url('../images/newdrivingbg.jpg');; border-radius:30px;padding:40px;margin-top:15px;display:none">
+        <div class="row" style="background-image: url('../images/newdrivingbg.jpg');; border-radius:30px;padding:40px;margin-top:15px;display:none" id="to_display">
             <div class="col-md" id="booking_details" >
                 <h3 style="font-weight:bold;color:rgb(252, 247, 247)">Your Booking Details:</h3>
                 <span style="text-align:center; color:white">
