--- a/html/navbar.html
+++ b/html/navbar.html
@@ -100,8 +100,9 @@
        
       }
       else{
+        //commenting this part out cos testing
         alert("Please log in first!");
-        window.location.href = "login.html";
+        //window.location.href = "login.html"; 
       }
     }
     else{
