--- a/html/booking2.html
+++ b/html/booking2.html
@@ -44,7 +44,7 @@
             </div>
     </section>
 
-    <div class="container" >
+    <div class="container m-t-50"  >
         <div class="row" >
             <div class="col-8" id="to_fill">
                 <div class="row">
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-12 m-t-50" id="to_display" >
+                <div class="col-lg-4 col-sm-12 " id="to_display" style="display: none" >
                     <div style="background-color:white">
                         <div class="title text-white">
                             <h3 id="title">Your booking</h3>
