--- a/html/forum.html
+++ b/html/forum.html
@@ -167,7 +167,8 @@
             all_post_obj = get_all_post()
             console.log(all_post_obj)
             console.log(typeof all_post_obj)
-            console.log(all_post_obj["total_length"])
+            console.log(all_post_obj.key0)
+
 
             var no_of_post=all_post_obj.total_length;
 
@@ -175,7 +176,6 @@
             {
                 console.log(create_key(i))
             }
-
 
         </script>
     </body>
