--- a/html/forum.html
+++ b/html/forum.html
@@ -164,10 +164,9 @@
                 return result_key;
             }
 
-            all_post_obj = get_all_post()
-
-
-
+            get_all_post()
+            console.log(all_post_list)
+            
             var no_of_post=all_post_obj.total_length;
 
             for(var i=0;i<no_of_post;i++)
