--- a/html/booking.html
+++ b/html/booking.html
@@ -15,7 +15,7 @@
 
 <body style="background-color:#f5f8fa">
     <div id="nav-placeholder"></div>
-    <section class="bg-img-1 bg-overlay-3 p-t-0 p-b-50" style="background-image: url('../images/carousel1');">
+    <section class="bg-img-1 bg-overlay-3 p-t-0 p-b-50" style="background-image: url('../images/carousel1.jpg');">
         <div class="container">
             <div class="flex-w flex-sb-m">
                 <div class="p-t-10 p-b-10 p-r-30">
@@ -101,7 +101,7 @@
                         <a class="text-danger">You will need to pay the instructor at the start of the lesson</a>
                         <hr>
                         
-                        <a href="" class="button5" style="background-color:rgb(11, 11, 61);" id="confirmation">Confirm and Book Slot</a>
+                        <button class="button5" style="background-color:rgb(11, 11, 61);" id="confirmation">Confirm and Book Slot</>
                     </div>
                     
             </div>
