--- a/html/add_post.html
+++ b/html/add_post.html
@@ -13,7 +13,7 @@
         <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
 
-        <script src="../js/post.js"></script>
+        <script src="../js/post2.js"></script>
     
     </head>
     
@@ -116,9 +116,7 @@
             var date = today.getDate()+'-'+(today.getMonth()+1)+'-'+today.getFullYear();
             var time = today.getHours() + ":" + cur_min;
             cur_time = date + ", " + time
-
             create_new_post(cur_title,cur_content,cur_userid,cur_tag,cur_time,0)
-
         }
         </script>
     </body>
