--- a/html/course-list.html
+++ b/html/course-list.html
@@ -97,53 +97,53 @@
 						<fieldset>
 							<div class="form-group">
 								<div class="tg-select">
-									<select class="selectpicker" data-live-search="true" data-width="100%">
+									<select class="selectpicker" data-live-search="true" data-width="100%" id="location" >
 										<option value="" disabled selected>Location</option>
-										<option data-tokens="Woodlands">Woodlands</option>
-										<option data-tokens="Yishun">Yishun</option>
-										<option data-tokens="Clementi">Clementi</option>
-										<option data-tokens="Yio Chu Kang">Yio Chu Kang</option>
-										<option data-tokens="Eunos">Eunos</option>
+										<option data-tokens="Woodlands" value="woodlands">Woodlands</option>
+										<option data-tokens="Yishun" value="yishun" >Yishun</option>
+										<option data-tokens="Clementi" value="clementi" >Clementi</option>
+										<option data-tokens="Yio Chu Kang" id="yio chu kang">Yio Chu Kang</option>
+										<option data-tokens="Eunos" id="eunos">Eunos</option>
 									</select>
 								</div>
 							</div>
 							<div class="form-group">
 								<div class="tg-select">
-									<select class="selectpicker" data-live-search="true" data-width="100%">
+									<select class="selectpicker" data-live-search="true" data-width="100%" id="rating">
 										<option value="" disabled selected>Rating</option>
-										<option data-tokens="5 Stars">5 Stars</option>
-										<option data-tokens="4 Stars">4 Stars</option>
-										<option data-tokens="3 Stars">3 Stars</option>
-										<option data-tokens="2 Stars">2 Stars</option>
-										<option data-tokens="1 Stars">1 Stars</option>
+										<option data-tokens="5 Stars" >5 Stars</option>
+										<option data-tokens="4 Stars" >4 Stars</option>
+										<option data-tokens="3 Stars" >3 Stars</option>
+										<option data-tokens="2 Stars" >2 Stars</option>
+										<option data-tokens="1 Stars" >1 Stars</option>
 									</select>
 								</div>
 							</div>
 							<div class="form-group">
 								<div class="tg-select">
-									<select class="selectpicker" data-live-search="true" data-width="100%">
+									<select class="selectpicker" data-live-search="true" data-width="100%" id="language">
 										<option value="" disabled selected>Language</option>
-										<option data-tokens="English">English</option>
-										<option data-tokens="Malay">Malay</option>
-										<option data-tokens="Tamil">Tamil</option>
-										<option data-tokens="Chinese">Chinese</option>
+										<option data-tokens="English" id="english">English</option>
+										<option data-tokens="Malay" id="malay">Malay</option>
+										<option data-tokens="Tamil" id="tamil">Tamil</option>
+										<option data-tokens="Chinese" id="chinese">Chinese</option>
 									</select>
 								</div>
 							</div>
 							<div class="form-group">
 								<div class="tg-select">
-									<select class="selectpicker" data-live-search="true" data-width="100%">
+									<select class="selectpicker" data-live-search="true" data-width="100%" id="budget">
 										<option value="" disabled selected>Budget</option>
-										<option data-tokens="$50">$50</option>
-										<option data-tokens="$70">$70</option>
-										<option data-tokens="$90">$90</option>
-										<option data-tokens="$100">$100</option>
+										<option data-tokens="$50" id="50">$50</option>
+										<option data-tokens="$70" id="70">$70</option>
+										<option data-tokens="$90" id="90">$90</option>
+										<option data-tokens="$100" id="100">$100</option>
 									</select>
 								</div>
 							</div>
 				
 							<div class="form-group">
-								<button class="tg-btn" type="submit"><span>Filter</span></button>
+								<button class="tg-btn" type="submit" id="submit"  ><span>Filter</span></button>
 							</div>
 						</fieldset>
 					</form>
@@ -275,6 +275,24 @@
 	  $(function(){
 		  $("#footer").load("footer.html");
 		});
+
+		document.getElementById("submit").addEventListener("click",getSelectValue)
+
+		function getSelectValue()
+		{
+			var location = document.getElementById("location").value;
+			var rating = document.getElementById("rating").value;
+			var langauge=document.getElementById("language").value;
+			var budget=document.getElementById("budget").value;
+			budget=Number(budget.slice(1,3));
+			langauge=langauge.toLowerCase();
+			rating=rating.slice(0,1);
+			console.log(budget);
+			console.log(location);
+			console.log(rating);
+			console.log(langauge);
+		}
+	
 	</script>
 
 	<script src="../filterbar/js/vendor/jquery-library.js"></script>
@@ -292,6 +310,9 @@
 	<script src="../filterbar/js/parallax.js"></script>
 	<script src="../filterbar/js/gmap3.js"></script>
 	<script src="../filterbar/js/main.js"></script>
+	<script>
+
+	</script>
 
 </body>
 </html>
