click on date will display timings

--- a/html/booking.html
+++ b/html/booking.html
@@ -13,7 +13,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
 </head>
 
-<body style="background-color:#f5f8fa">
+<body style="background-color:#f5f8fa;height:130%">
     <div id="nav-placeholder"></div>
     <section class="bg-img-1 bg-overlay-3 p-t-0 p-b-50" style="background-image: url('../images/carousel1.jpg');">
         <div class="container">
@@ -44,7 +44,7 @@
             </div>
     </section>
 
-    <div class="container m-t-50"  >
+    <div class="container m-t-50" style="width:150%;" >
         <div class="row" >
             <div class="col-8" id="to_fill">
                 <div class="row">
@@ -67,7 +67,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button type="button" class="btn btn-dark" style="margin-top:260px;margin-left:20px" id="confirm">Select this date?</button>
+                        <div style="height:270px"></div>
                     </div>
                     
                 </div>
@@ -94,7 +94,7 @@
                             <ul>
                                 <li>Date: <strong id="book_date">Select a Date</strong></li>
                                 <li>Time: <strong id="book_time">Select A Time</strong></li>
-                                <li>Instructor: <strong id="book_instr">Dr. julia Jhones</strong></li>
+                                <li>Instructor: <strong id="book_instr"></strong></li>
                             </ul>
                         </div>
                         <hr>
