--- a/html/forum.html
+++ b/html/forum.html
@@ -23,7 +23,7 @@
             <div class="row justify-content-center pt-1">
                 <div class="col-12">
                     <div class="input-group">
-                        <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
+                        <input type="search" id="search_keyword" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
                         <button type="button" class="btn btn-outline-primary" id="search_button" onclick="search_for_post()">Search</button>
                         <button type="button" class="btn btn-outline-primary" id="add_post" onclick="add_new_post()">Add New Post</button>
                     </div>
@@ -56,7 +56,7 @@
                 </div>
 
                 <div class="col-12 mt-2 pt-1">
-                    <button type="button" class="btn btn-danger" id="clear_sort" onclick="clear_sort()">Restore All Post</button>
+                    <button type="button" class="btn btn-danger" id="clear_sort" onclick="clear_sort()">Reset All</button>
                 </div>
             </div>
         </div>
@@ -76,6 +76,8 @@
                 $("#nav-placeholder").load("navbar.html");
             });
 
+            get_all_post()
+
             var cur_filter=null
             var cur_tag=null
 
@@ -86,9 +88,29 @@
             practical_button = document.getElementById("practical_tag")
             other_button = document.getElementById("other_tag")
 
+            var search_bar_input = document.getElementById("search_keyword")
+            search_bar_input.addEventListener("input",search_for_post)
+
             function search_for_post()
             {
+                var input, filter, table, rows, row_title, i, txtValue;
+                table = document.getElementById("post_table");
+                input = document.getElementById('search_keyword');
+                filter = input.value.toUpperCase();
+                table = document.getElementById("post_table");
+                rows=table.rows
                 
+
+                // Loop through all list items, and hide those who don't match the search query
+                for (i = 1; i < (rows.length); i++) {
+                    row_title = rows[i].getElementsByTagName("td")[0];
+                    txtValue = row_title.textContent || row_title.innerText;
+                    if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                    rows[i].style.display = "";
+                    } else {
+                    rows[i].style.display = "none";
+                    }
+                }
             }
 
             function add_new_post()
@@ -230,28 +252,19 @@
                 var table = document.getElementById("post_table");
                 var rows = table.rows
 
-                    for (i = 1; i < (rows.length - 1); i++) 
+                    for (i = 1; i < (rows.length); i++) 
                     {
                         var cur_row_id = rows[i].id
                         var row_tag = rows[i].getElementsByTagName("td")
                         if (row_tag[2].innerHTML != "Theory")
                         {
-                            row_tag[0].setAttribute("style","display:none")
-                            row_tag[1].setAttribute("style","display:none")
-                            row_tag[2].setAttribute("style","display:none")
-                            row_tag[3].setAttribute("style","display:none")
-                            row_tag[4].setAttribute("style","display:none")
-                            row_tag[5].setAttribute("style","display:none")
+                            rows[i].setAttribute("style","display:none")
+                            
                         }
 
                         else
                         {
-                            row_tag[0].setAttribute("style","")
-                            row_tag[1].setAttribute("style","")
-                            row_tag[2].setAttribute("style","")
-                            row_tag[3].setAttribute("style","")
-                            row_tag[4].setAttribute("style","")
-                            row_tag[5].setAttribute("style","")
+                            rows[i].setAttribute("style","")
                         }
                     }
             }
@@ -263,7 +276,6 @@
                 practical_button.setAttribute("class","btn btn-secondary")
                 other_button.setAttribute("class","btn btn-outline-warning")
 
-                var row_to_remove=[]
                 var table = document.getElementById("post_table");
                 var rows = table.rows
 
@@ -273,22 +285,12 @@
                         var row_tag = rows[i].getElementsByTagName("td")
                         if (row_tag[2].innerHTML != "Practical")
                         {
-                            row_tag[0].setAttribute("style","display:none")
-                            row_tag[1].setAttribute("style","display:none")
-                            row_tag[2].setAttribute("style","display:none")
-                            row_tag[3].setAttribute("style","display:none")
-                            row_tag[4].setAttribute("style","display:none")
-                            row_tag[5].setAttribute("style","display:none")
+                            rows[i].setAttribute("style","display:none")
                         }
 
                         else
                         {
-                            row_tag[0].setAttribute("style","")
-                            row_tag[1].setAttribute("style","")
-                            row_tag[2].setAttribute("style","")
-                            row_tag[3].setAttribute("style","")
-                            row_tag[4].setAttribute("style","")
-                            row_tag[5].setAttribute("style","")
+                            rows[i].setAttribute("style","")
                         }
             }
         }
@@ -310,22 +312,12 @@
                         var row_tag = rows[i].getElementsByTagName("td")
                         if (row_tag[2].innerHTML != "Other")
                         {
-                            row_tag[0].setAttribute("style","display:none")
-                            row_tag[1].setAttribute("style","display:none")
-                            row_tag[2].setAttribute("style","display:none")
-                            row_tag[3].setAttribute("style","display:none")
-                            row_tag[4].setAttribute("style","display:none")
-                            row_tag[5].setAttribute("style","display:none")
+                            rows[i].setAttribute("style","display:none")
                         }
 
                         else
                         {
-                            row_tag[0].setAttribute("style","")
-                            row_tag[1].setAttribute("style","")
-                            row_tag[2].setAttribute("style","")
-                            row_tag[3].setAttribute("style","")
-                            row_tag[4].setAttribute("style","")
-                            row_tag[5].setAttribute("style","")
+                            rows[i].setAttribute("style","")
                         }
                     }
             }
@@ -342,6 +334,10 @@
                 theory_button.setAttribute("class","btn btn-outline-info")
                 practical_button.setAttribute("class","btn btn-outline-secondary")
                 other_button.setAttribute("class","btn btn-outline-warning")
+
+                var search_bar = document.getElementById("search_keyword")
+                console.log(search_bar.value)
+                search_bar.value=""
 
                 get_all_post()
             }
