--- a/html/booking.html
+++ b/html/booking.html
@@ -11,6 +11,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
+    <script type="module" src="../js/timings.js"></script>
 </head>
 
 <body style="background-color:#f5f8fa;height:130%">
