--- a/html/footer.html
+++ b/html/footer.html
@@ -56,7 +56,7 @@
 
  
 
-
+<!-- 
    <footer class="bg4 p-t-25" style="padding:0 !important">
 		<div class="container p-b-60">
 			<div class="row">
@@ -121,7 +121,7 @@
 		</div>
 
 
-	</footer>
+	</footer> -->
 
 
 
