--- a/html/navbar.html
+++ b/html/navbar.html
@@ -60,7 +60,7 @@
         
         <!-- Logo desktop -->		
         <a href="index.html" class="logo">
-          <img src="../images/icons/logo.png" alt="IMG-LOGO">
+          <img src="../images/logo.png" width="50%" height="100%">
         </a>
 
         <!-- Menu desktop -->
