--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-	<title>Homepage 1</title>
+	<title>DriverZone-Home</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="AuCreative theme tempalte">
 	<meta name="author" content="AuCreative">
@@ -119,7 +119,7 @@
 					    data-height="['auto']">
 						<div class="p-l-10 p-r-10 p-t-5 p-b-5">
 							<!-- Button -->
-							<a href="#" class="btn-drive size1 m-txt1 bg-main bo-rad-4 trans-03">
+							<a href="course-list.html" class="btn-drive size1 m-txt1 bg-main bo-rad-4 trans-03">
 								Book instructors
 								<i class="fa fa-chevron-right m-l-9 fs-14" aria-hidden="true"></i>
 							</a>
@@ -164,7 +164,7 @@
 					    data-height="['auto']">
 				    	<div class="p-l-10 p-r-10 p-t-5 p-b-5">
 							<!-- Button -->
-							<a href="#" class="btn-drive size1 m-txt1 bg-main bo-rad-4 trans-03">
+							<a href="course-list.html" class="btn-drive size1 m-txt1 bg-main bo-rad-4 trans-03">
 								Book instructors
 								<i class="fa fa-chevron-right m-l-9 fs-14" aria-hidden="true"></i>
 							</a>
@@ -466,11 +466,11 @@
 	<script src="../js/slick-custom.js"></script>
 <!--===============================================================================================-->
 	<script src="../vendor/bootstrap/js/popper.min.js"></script>
-	<script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+	<!-- <script src="../vendor/bootstrap/js/bootstrap.min.js"></script> -->
 <!--===============================================================================================-->	
 	<script src="../vendor/revolution/js/jquery.themepunch.tools.min.js"></script>
 	<script src="../vendor/revolution/js/jquery.themepunch.revolution.min.js"></script>
-	<script src="../vendor/revolution/js/extensions/revolution.extension.video.min.js"></script>
+	<!-- <script src="../vendor/revolution/js/extensions/revolution.extension.video.min.js"></script> -->
 	<script src="../js/slide-custom.js"></script>
 <!--===============================================================================================-->
 	<script src="../js/main.js"></script>
