--- a/html/index.html
+++ b/html/index.html
@@ -10,10 +10,28 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!--===============================================================================================-->
+	<!-- <link rel="stylesheet" type="text/css" href="../vendor/bootstrap/css/bootstrap.min.css"> -->
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="../fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+<!--===============================================================================================-->
+	<!-- <link rel="stylesheet" type="text/css" href="../fonts/elegant-font/html-css/style.css"> -->
+<!--===============================================================================================-->	
+	<!-- <link rel="stylesheet" type="text/css" href="../vendor/revolution/css/layers.css"> -->
 	<link rel="stylesheet" type="text/css" href="../vendor/revolution/css/navigation.css">
+	<!-- <link rel="stylesheet" type="text/css" href="../vendor/revolution/css/settings.css"> -->
+<!--===============================================================================================-->
+<!--===============================================================================================-->
+	<!-- <link rel="stylesheet" type="text/css" href="../vendor/slick/slick.css"> -->
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="../vendor/animate/animate.css">
+<!--===============================================================================================-->
+<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="../vendor/animsition/dist/css/animsition.min.css">
 <!--===============================================================================================-->
+	<!-- <link rel="stylesheet" type="text/css" href="../css/util.css"> -->
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
+	<!-- <link rel="stylesheet" type="text/css" href="../css/color.css"> -->
+	<link rel="stylesheet" type="text/css" href="../css/all_icons_min.css">
 <!--===============================================================================================-->
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
@@ -444,7 +462,7 @@
 			<div class="flex-c-m p-t-46">
 				<!-- Button -->
 				<a href="course-list.html" class="btn-drive m-txt1 size5 bg2 hov-color-white bo-rad-4">
-					View All Course
+					View All Instructors
 					<i class="fa fa-chevron-right m-l-9 fs-14" aria-hidden="true"></i>
 				</a>
 			</div>
