--- a/html/navbar.html
+++ b/html/navbar.html
@@ -15,11 +15,11 @@
 
       	
 <!--===============================================================================================-->
-	<link rel="icon" type="image/png" href="../images/icons/favicon.png"/>
+	<!-- <link rel="icon" type="image/png" href="../images/icons/favicon.png"/> -->
   <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="../vendor/bootstrap/css/bootstrap.min.css">
   <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="../fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" type="text/css" href="../fonts/font-awesome-4.7.0/css/font-awesome.min.css"> -->
   <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="../fonts/elegant-font/html-css/style.css">
   <!--===============================================================================================-->	
