--- a/html/course-list.html
+++ b/html/course-list.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-	<title>Instructors</title>
+	<title>Our Courses</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="AuCreative theme tempalte">
 	<meta name="author" content="AuCreative">
@@ -12,8 +12,8 @@
 <link rel="stylesheet" href="../filterbar/css/bootstrap.min.css">
 <link rel="stylesheet" href="../filterbar/css/bootstrap-select.css">
 <link rel="stylesheet" href="../filterbar/css/main.css">
-<!-- <link rel="stylesheet" href="../filterbar/css/color.css">
-<link rel="stylesheet" href="../filterbar/css/responsive.css"> -->
+<link rel="stylesheet" href="../filterbar/css/color.css">
+<link rel="stylesheet" href="../filterbar/css/responsive.css">
 
 	<link rel="stylesheet" type="text/css" href="../vendor/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../vendor/animsition/dist/css/animsition.min.css">
@@ -182,8 +182,8 @@
 	<script src="../vendor/jquery/jquery-3.2.1.min.js"></script>
 
 	<script src="../vendor/animsition/dist/js/animsition.min.js"></script>
-	<!-- <script src="../vendor/bootstrap/js/popper.min.js"></script>
-	<script src="../vendor/bootstrap/js/bootstrap.min.js"></script> -->
+	<script src="../vendor/bootstrap/js/popper.min.js"></script>
+	<script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
 	<script src="../js/main.js"></script>
 	<div id="nav-placeholder">
 
