--- a/html/course-detail.html
+++ b/html/course-detail.html
@@ -22,7 +22,7 @@
 <!--===============================================================================================-->
 	<!-- <link rel="stylesheet" type="text/css" href="../vendor/bootstrap/css/bootstrap.min.css"> -->
 <!--===============================================================================================-->
-	<!-- <link rel="stylesheet" type="text/css" href="../fonts/font-awesome-4.7.0/css/font-awesome.min.css"> -->
+	<link rel="stylesheet" type="text/css" href="../fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 <!--===============================================================================================-->
 	<!-- <link rel="stylesheet" type="text/css" href="../fonts/elegant-font/html-css/style.css"> -->
 <!--===============================================================================================-->
