--- a/html/course-list.html
+++ b/html/course-list.html
@@ -20,6 +20,7 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
 	<link rel="stylesheet" type="text/css" href="../css/color.css">
+	<link rel="stylesheet" type="text/css" href="..\fonts\font-awesome-4.7.0\css\font-awesome.css">
 <!--===============================================================================================-->
 
 
